yuv-player 프로젝트 추가 및 빈 소스 추가

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,7 @@ endif()
 add_subdirectory (glew-2.1.0/build/cmake)
 add_subdirectory (glfw)
 add_subdirectory (glm)
+
+# yuv-player
+add_executable(yuv-player
+	player/yuv-player.cpp)
