--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "glm"]
 	path = glm
 	url = https://github.com/g-truc/glm.git
+[submodule "rpavlik-cmake-modules"]
+	path = rpavlik-cmake-modules
+	url = https://github.com/rpavlik/cmake-modules.git
